[package]
name = "sqlx-d1"
version = "0.0.1"
edition = "2021"
authors = ["Alexander van Saase <avsaase@gmail.com>"]

[dependencies]
futures-core = { version = "0.3.30", default-features = false }
futures-util = "0.3.30"
log = "0.4.21"
sqlx-core = "0.7.4"
worker-sys = { version = "0.1.0", features = ["d1"] }
